2008-11-16  Per Bothner  <per@bothner.com>

	Make 'dump' more convenient and more flexible.
	* ClassTypeWriter.java (PRINT_VERSION, PRINT_VERBOSE,
	PRINT_CONSTANT_POOL, PRINT_CONSTANT_POOL_INDEXES): New constants.
	(setFlags): New field.
	(printConstants): Remove field - use bits in flags field instead.
	(print()): New flags field; also print attributes.
	(print(ClassType), printAttributes): New methods.
	* ClassFileInput.java (readFormatVersion): New method.
	* dump.java (<init>): Change calling-sequence and make non-public.
	(printAttributes): Move to super-class.
	(process): New methods.  Handles .jar/.zip as well as .class files.
	(main): Create ClassTypeWriter immediately.
	New handling to use process and accept class names.
	(uriSchemeLength, uriSchemeSpecified): Methods coped from
	gnu.text.Path.
	(usage): Expand.
	* ObjectType.java (getContextClassLoader): New method.
	(getContextClass): Use it.
	* ConstantValueAttr.java (print): Use printOptionalIndex.

2008-11-13  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitInc): Generalize type check.

2008-11-11  Per Bothner  <per@bothner.com>

	* StackMapTableAttr.java (dataLength): New field, for when we
	generate this attribute.  Use it in place of data.length.

	* StackMapTableAttr.java (print): Print locals/stack offset before
	types, and generally make printing nicer.
	(getMethod): New method.
	(printVerificationType, extractVerificationType, reallocBuffer,
	extractVerificationTypes, printVerificationTypes): New methods.
	(print_verification_type, print_verification_types): Remove methods.

2008-09-16  Per Bothner  <per@bothner.com>

	Add support for try-finally without using jsr,
	which is incompatible with StackMapTable.
	* TryState.java (returnSwitch, exception): New fields.
	* CodeAttr.java (callFinally): New helper function.
	(doPendingFinalizers): Use it.
	(emitTryStart, emitTryEnd, emitFinallyStart, emitFinallyEnd):
	Simulate jsr using a switch.	

2008-09-10  Per Bothner  <per@bothner.com>
